# play-with-torch-script

./: README.md
clang_libtooling/: CMakeLists.txt  hello_world.cpp
examples/: stacked_lstm_v2.py  test.py  test_ts_irs.txt
examples/TS_IRs/: stacked_lstm_TS.prototxt  stacked_lstm_v2_TS.prototxt
examples/c/: example0.c  example0.yaml  example1.c  example1.yaml  helloworld.c  helloworld_clan.txt  helloworld_pet.yaml  makefile  utils.h
examples/python/: stacked_lstm.py  stacked_lstm_v2.py  ts_ssa_ir.txt
parser_test/: clan_ir.txt  example.c  example_clang_ast.txt  pet_ir.txt  pet_lstm_test.txt  schedule_pretty_print.txt  stacked_lstm.c  stacked_lstm_clan_ir.txt  stacked_lstm_clang_ast.txt  stacked_lstm_pet_ir.txt  stacked_lstm_python_ast.txt  stacked_lstm_ts_ast.txt  ts_ast.txt  ts_graph.txt
parser_test/srcs/: simplified_lstm.c  stacked_lstm.c  stacked_lstm.py
pet_examples/: array1.c  array1.yaml  array2.c  array2.yaml  array3.c  array3.yaml  clan.txt  hello.c  hello_log.txt  stacked_lstm_pet_tree.txt
pet_examples/lstm_example/: schedule_current.yaml  schedule_pet.yaml
pet_examples/schedule/: example1.c  example1_parsed.yaml  example2.c  example2_parsed.yaml
ts_parser/: example.py
utils/: __init__.py  data_utils.py
utils/cells/: __init__.py  vanilla.py
